--- a/app/src/main/res/drawable/bg_upload_button.xml
+++ b/app/src/main/res/drawable/bg_upload_button.xml
@@ -6,7 +6,7 @@
     android:shape="rectangle">
 
     <!-- 배경 색상 지정 -->
-    <solid android:color="#90999999"/>
+    <solid android:color="#F0F0F0"/>
 
     <!-- 상단만 곡률 주기 (하단은 0) -->
     <corners
@@ -14,4 +14,11 @@
         android:topRightRadius="16dp"
         android:bottomLeftRadius="16dp"
         android:bottomRightRadius="16dp"/>
+
+    <!-- 점선 테두리 -->
+    <stroke
+        android:width="2dp"
+        android:color="#999999"
+        android:dashWidth="4dp"
+        android:dashGap="2dp" />
 </shape>
