--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,7 +33,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="0dp"
-        android:layout_height="73dp"
+        android:layout_height="wrap_content"
         android:background="#FAF6F5"
         app:itemRippleColor="@null"
         app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
