08/06 search, report ui and minorfix

--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -44,7 +44,6 @@
         android:src="@drawable/ic_arrow_back"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
         app:layout_constraintWidth_percent="0.07"
         app:layout_constraintHeight_percent="0.037"
         app:layout_constraintTop_toTopOf="@id/guideline_text_greeting_h"
@@ -55,7 +54,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="KLUE의 RobERTa 모델을 통해\n보이스피싱 여부를 분석해드려요"
+        android:text="KLUE의 RoBERTa 모델을 통해\n보이스피싱 여부를 분석해드려요"
         android:fontFamily="@font/pretendard_gov_medium"
         android:textSize="20sp"
         android:textColor="#010101"
@@ -175,7 +174,7 @@
         android:text="이 서비스는 모델의 정확도를 지속적으로 개선하고 있지만, 100%의\n정확도를 보장하지 않아요. 결과는 참조용으로만 사용해 주세요."
         android:fontFamily="@font/pretendard_gov_medium"
         android:textSize="12sp"
-        android:textColor="#666666"
+        android:textColor="#999999"
         android:gravity="center"
         android:lineSpacingExtra="3sp"
         app:layout_constraintTop_toTopOf="@id/guideline_text_greeting_h_end"
