--- a/app/src/main/res/layout/list_item_reply.xml
+++ b/app/src/main/res/layout/list_item_reply.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp"
+    android:paddingEnd="0dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp">
 
@@ -42,6 +42,7 @@
             android:id="@+id/iv_reply_options"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginEnd="0dp"
             android:src="@drawable/ic_more_horiz"
             app:tint="@color/dark_gray"
             android:contentDescription="@string/reply_options_description"
