--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="my_orange">#FF922B</color>
     <color name="gradient_blue_start">#4FC3F7</color>
     <color name="gradient_blue_end">#0D47A1</color>
+    <color name="gray">#808080</color>
 </resources>
