--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -27,7 +27,7 @@
         android:id="@+id/tv_greeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="커뮤니티"
+        android:text="@string/community"
         android:fontFamily="@font/pretendard_gov_semibold"
         android:textSize="24sp"
         android:textColor="#010101"
@@ -56,7 +56,7 @@
             android:id="@+id/tv_sort_latest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="최신순"
+            android:text="@string/latest"
             android:textSize="16sp"
             android:textColor="@color/gray"
             android:fontFamily="@font/pretendard_gov_semibold"
@@ -69,7 +69,7 @@
             android:textSize="16sp"
             android:textColor="@color/gray"
             android:fontFamily="@font/pretendard_gov_semibold"
-            android:text="공감순"/>
+            android:text="@string/likest"/>
     </LinearLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -110,6 +110,6 @@
         app:srcCompat="@drawable/ic_write"
         app:backgroundTint="#FF922B"
         app:tint="@android:color/white"
-        android:contentDescription="글쓰기" />
+        android:contentDescription="@string/writing" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
