--- a/app/src/main/res/layout/activity_search_num.xml
+++ b/app/src/main/res/layout/activity_search_num.xml
@@ -260,12 +260,12 @@
 
         <TextView
             android:id="@+id/tv_result_safe"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="안심하고 연락해도 괜찮아요."
             android:textColor="#666666"
             android:textSize="14sp"
             android:visibility="gone"
+            android:gravity="center"
             app:layout_constraintTop_toTopOf="@id/view_upload"
             app:layout_constraintBottom_toBottomOf="@id/view_upload"
             app:layout_constraintStart_toStartOf="@id/view_upload"
@@ -273,5 +273,20 @@
             app:layout_constraintVertical_bias="0.9"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="최근 3개월 간의 신고 이력을 조회해드려요."
+        android:fontFamily="@font/pretendard_gov_medium"
+        android:textSize="12sp"
+        android:textColor="#999999"
+        android:gravity="center"
+        android:lineSpacingExtra="3sp"
+        app:layout_constraintTop_toTopOf="@id/guideline_text_greeting_h_end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline_text_greeting_v"
+        app:layout_constraintEnd_toEndOf="@id/guideline_text_greeting_v_end"
+        app:layout_constraintVertical_bias="0.9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
