--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -141,7 +141,7 @@
             app:layout_constraintEnd_toEndOf="@id/iv_temp"
             app:layout_constraintTop_toTopOf="@id/iv_temp"
             app:layout_constraintBottom_toBottomOf="@id/iv_temp"
-            app:layout_constraintVertical_bias="0.1"/>
+            app:layout_constraintVertical_bias="0.09"/>
 
         <TextView
             android:id="@+id/tv_news_company"
@@ -150,7 +150,7 @@
             android:text="TV조선"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#666666"
-            android:textSize="14sp"
+            android:textSize="13sp"
             app:layout_constraintStart_toStartOf="@id/iv_temp"
             app:layout_constraintEnd_toEndOf="@id/iv_temp"
             app:layout_constraintTop_toTopOf="@id/iv_temp"
@@ -162,10 +162,10 @@
             android:id="@+id/tv_news_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="08 / 04"
+            android:text="08.04"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#666666"
-            android:textSize="14sp"
+            android:textSize="13sp"
             app:layout_constraintStart_toStartOf="@id/iv_temp"
             app:layout_constraintEnd_toEndOf="@id/iv_temp"
             app:layout_constraintTop_toTopOf="@id/iv_temp"
@@ -179,14 +179,14 @@
             android:text="[단독] &quot;승객이 보이스피싱범 같다&quot;...5천만 원 피해 막은 택시기사"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#010101"
-            android:textSize="18sp"
+            android:textSize="17sp"
             android:lineSpacingExtra="2dp"
             app:layout_constraintWidth_percent="0.93"
             app:layout_constraintStart_toStartOf="@id/iv_temp"
             app:layout_constraintEnd_toEndOf="@id/iv_temp"
             app:layout_constraintTop_toTopOf="@id/iv_temp"
             app:layout_constraintBottom_toBottomOf="@id/iv_temp"
-            app:layout_constraintVertical_bias="0.82"/>
+            app:layout_constraintVertical_bias="0.83"/>
 
         <TextView
             android:id="@+id/tv_news_caster"
@@ -195,7 +195,7 @@
             android:text="허유하 기자"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#666666"
-            android:textSize="14sp"
+            android:textSize="13sp"
             app:layout_constraintStart_toStartOf="@id/iv_temp"
             app:layout_constraintEnd_toEndOf="@id/iv_temp"
             app:layout_constraintTop_toTopOf="@id/iv_temp"
@@ -210,7 +210,7 @@
             android:text="네이버뉴스 바로가기"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#666666"
-            android:textSize="14sp"
+            android:textSize="13sp"
             android:clickable="true"
             android:focusable="true"
             android:foreground="?attr/selectableItemBackground"
@@ -248,7 +248,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="통화녹음\n업로드"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#010101"
             android:lineSpacingExtra="5dp"
@@ -324,7 +324,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="계좌번호\n조회"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#010101"
             android:lineSpacingExtra="5dp"
@@ -400,7 +400,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="전화번호\n조회"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#010101"
             android:lineSpacingExtra="5dp"
@@ -474,7 +474,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="의심 번호\n제보"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:fontFamily="@font/pretendard_gov_medium"
             android:textColor="#010101"
             android:lineSpacingExtra="5dp"
